--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 - hosts: server
   vars:
-   image: ajizkai/docker-ansible:beta
+   image: johanesprihartono/docker-ansible
   tasks:
   - name: install python-docker ubuntu
     apt:
